# pollution-exposure-minimizer-env

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
data/: pollution_city_graph.json
scripts/: preview_tasks.py
server/: Dockerfile  __init__.py  app.py  aqi.py  baseline.py  city_graph.py  grader.py  my_env_environment.py  pollution_exposure_minimizer_environment.py  requirements.txt  tasks.py
tasks/: __init__.py  baseline.py  grader.py  tasks.py
